<resources>
    <string name="app_name">元新康复</string>
    <string name="family_train_plan">家庭训练计划</string>
    <string name="remote_recure">远程康复治疗</string>
    <string name="online_recure_advice">在线康复咨询</string>
    <string name="wechat_login">微信登录</string>
    <string name="phonenum_or_files_login">手机号/档案号登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="there_is_no_account">还没有账号?</string>
    <string name="at_once_register">立即注册</string>
    <string name="get_checknum">获取验证码</string>
    <string name="password_login">密码登录</string>
    <string name="message_login">短信登录</string>
    <string name="complete">完成</string>
    <string name="phone_is_not_empty">手机号不能为空</string>
    <string name="no_network">网络未连接</string>
    <string name="checknum_is_send_success">验证码发送成功</string>
    <string name="confirm">确认</string>
    <string name="person_center">个人中心</string>
    <string name="person_information">个人信息</string>
    <string name="my_family">我的家庭</string>
    <string name="order_record">预约记录</string>
    <string name="off_line_video">离线视频</string>
    <string name="healthy_document">健康档案</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="recure_consule">康复咨询</string>
    <string name="setting">设置</string>
    <string name="not_bind">未绑定</string>
    <string name="cancel_order">取消预约</string>
    <string name="please_input_phonenum">请输入手机号/档案号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_phonenumber">请输入手机号</string>
    <string name="please_input_checknum">请输入验证码</string>
    <string name="please_input_11_phonenum">请输入11位手机号</string>
    <string name="please_input_message_checknum">请输入短信验证码</string>
    <string name="please_set_6_25word_number_password">请设置6～25位字母数字组合密码</string>
    <string name="please_input_phone_or_password">请输入手机号/密码</string>
    <string name="please_input_phone_or_checknum">请输入手机号/验证码</string>
    <string name="please_input_your_identifycard_number">请输入您的身份证号</string>
    <string name="please_input_your_name">请输入姓名</string>
    <string name="please_input_your_new_name">请输入新名称</string>
    <string name="please_input_community_name">请输入小区名称</string>
    <string name="please_input_address">请输入具体地址</string>
    <string name="profession_01">政府机关公务员</string>
    <string name="profession_02">学校教师</string>
    <string name="profession_03">企业白领</string>
    <string name="profession_04">服务业从业者</string>
    <string name="profession_05">农、林、牧、渔从业者</string>
    <string name="profession_06">生产、运输设备操作者</string>
    <string name="profession_07">军人</string>
    <string name="profession_08">其他</string>


    <string name="network_info_on">网络已经连接</string>
    <string name="network_info_off">网络已经断开</string>
</resources>
