<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/graybackground"
    >

    <include layout="@layout/all_title_text_backimg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_headline_height"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/person_center_imageview"
                    android:layout_width="@dimen/person_center_image_height"
                    android:layout_height="@dimen/person_center_image_height"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    tools:src="@drawable/test"
                    />
                <TextView
                    android:id="@+id/person_center_name"
                    android:layout_toRightOf="@id/person_center_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:text="@string/app_name"
                    android:textSize="@dimen/font_18"
                    android:textColor="@color/black"
                    />


            </RelativeLayout>

            <com.wuyueshangshui.yuanxinkangfu.wigdet.ListItem
                android:id="@+id/person_information"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:itemIcon="@drawable/uc_1"
                app:itemTitle="@string/person_information"
                />

            <include layout="@layout/line_1dp"/>

            <com.wuyueshangshui.yuanxinkangfu.wigdet.ListItem
                android:id="@+id/my_family"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:itemIcon="@drawable/uc_2"
                app:itemTitle="@string/my_family"
                />

            <com.wuyueshangshui.yuanxinkangfu.wigdet.ListItem
                android:id="@+id/healthy_document"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:itemIcon="@drawable/uc_3"
                app:itemTitle="@string/healthy_document"
                />

            <include layout="@layout/line_1dp"/>

            <com.wuyueshangshui.yuanxinkangfu.wigdet.ListItem
                android:id="@+id/off_line_video"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:itemIcon="@drawable/uc_4"
                app:itemTitle="@string/off_line_video"
                android:visibility="invisible"
                />

            <include layout="@layout/line_1dp"/>

            <com.wuyueshangshui.yuanxinkangfu.wigdet.ListItem
                android:id="@+id/bind_wechat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:itemIcon="@drawable/uc_5"
                app:itemTitle="@string/bind_wechat"
                android:visibility="invisible"
                />

            <include layout="@layout/line_1dp"/>

            <com.wuyueshangshui.yuanxinkangfu.wigdet.ListItem
                android:id="@+id/recure_consule"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:itemIcon="@drawable/uc_6"
                app:itemTitle="@string/recure_consule"
                android:visibility="invisible"
                />

            <com.wuyueshangshui.yuanxinkangfu.wigdet.ListItem
                android:id="@+id/setting"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:itemIcon="@drawable/uc_7"
                app:itemTitle="@string/setting"
                android:visibility="invisible"
                />



        </LinearLayout>

    </ScrollView>



</LinearLayout>
