<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/graybackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_edittext_margin"
        android:layout_marginLeft="@dimen/login_edittext_margin"
        android:layout_marginRight="@dimen/login_edittext_margin"
        android:background="@color/white">

        <EditText
            android:id="@+id/password_login_phonenum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:padding="5dp"
            android:background="@null"
            android:maxLength="11"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_14"
            android:hint="@string/please_input_phonenum"
            />
        <ImageView
            android:id="@+id/password_login_delete_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@drawable/delete_edit_login_black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="@dimen/login_edittext_margin"
        android:layout_marginRight="@dimen/login_edittext_margin"
        android:background="@color/white">

        <EditText
            android:id="@+id/password_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_toLeftOf="@+id/password_login_delete_2"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_14"
            android:hint="@string/please_input_password"
            />

        <ImageView
            android:id="@+id/password_login_delete_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_edit_login_black"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/view01"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/view01"
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@color/black"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/password_login_forget"
            />


        <TextView
            android:id="@+id/password_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:text="@string/forget_password"
            />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/password_login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/login_button_margin"
        android:layout_marginRight="@dimen/login_button_margin"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:background="@color/wechat_login_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text"
            android:text="@string/there_is_no_account"
            />
        <TextView
            android:id="@+id/password_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_once_register"
            android:textColor="@color/wechat_login_button"
            />
    </LinearLayout>

</LinearLayout>
