<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/graybackground"
    tools:context="com.wuyueshangshui.yuanxinkangfu.login.RegisterActivity">

    <include layout="@layout/all_title_text_backimg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/login_edittext_margin"
        android:layout_marginLeft="@dimen/login_edittext_margin"
        android:layout_marginRight="@dimen/login_edittext_margin"
        android:background="@color/white">

        <EditText
            android:id="@+id/forgetpassword_phonenum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:padding="5dp"
            android:background="@null"
            android:maxLength="11"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_14"
            android:hint="@string/please_input_phonenum"
            />
        <ImageView
            android:id="@+id/forgetpassword_delete_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@drawable/delete_edit_login_black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="@dimen/login_edittext_margin"
        android:layout_marginRight="@dimen/login_edittext_margin"
        android:background="@color/white">

        <EditText
            android:id="@+id/forgetpassword_mess_checknum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@null"
            android:layout_toLeftOf="@+id/forgetpassword_delete_2"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_14"
            android:hint="@string/please_input_message_checknum"
            />

        <ImageView
            android:id="@+id/forgetpassword_delete_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_edit_login_black"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/view01"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/view01"
            android:layout_width="0.5dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@color/black"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/forgetpassword_get_checknum"
            />


        <TextView
            android:id="@+id/forgetpassword_get_checknum"
            android:layout_width="@dimen/get_checknum_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/get_checknum"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="@dimen/login_edittext_margin"
        android:layout_marginRight="@dimen/login_edittext_margin"
        android:background="@color/white">

        <EditText
            android:id="@+id/forgetpassword_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:padding="5dp"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_14"
            android:hint="@string/please_set_6_25word_number_password"
            />
        <ImageView
            android:id="@+id/forgetpassword_delete_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@drawable/delete_edit_login_black"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/forgetpassword_complete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/login_button_margin"
        android:layout_marginRight="@dimen/login_button_margin"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:background="@color/wechat_login_button">

        <TextView
            android:id="@+id/forgetpassword_complete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            />

    </LinearLayout>

</LinearLayout>
